Added some features